Once again trying to fix intro padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ header,
 
 /* Full Page Carousel itself*/
 .carousel {
-  height: 100%; }
+  height: 100%; 
+  padding-top: 150px;}
   .carousel .carousel-inner {
     height: 100%; }
     .carousel .carousel-inner .carousel-item,
